--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "Jason McKee",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier-eslint": "^8.8.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   }
